--- a/assets/partials/footer.html
+++ b/assets/partials/footer.html
@@ -2,25 +2,53 @@
     <div class="container py-2 px-sm-0">
         <div class="row align-items-center">
             <!-- All Links on Left -->
-            <div class="col-6 footer-column">
+            <div class="col-9 footer-column">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-4 footer-accordion-column">
                         <h5>Bloom'n</h5>
-                        <ul class="nav d-flex flex-column row-gap-0">
-                            <li class="nav-item"><a class="nav-link text-light" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link text-light" href="about.html">About Us</a></li>
-                            <li class="nav-item"><a class="nav-link text-light" href="team.html">Our Team</a></li>
-                            <li class="nav-item"><a class="nav-link text-light" href="gallery.html">Gallery</a></li>
-                        </ul>
+                        <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-bloomn">
+                            <span>Bloom'n</span>
+                            <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
+                        </button>
+                        <div class="footer-accordion-content" id="footer-accordion-bloomn">
+                            <ul class="nav d-flex flex-column row-gap-0">
+                                <li class="nav-item"><a class="nav-link text-light" href="index.html">Home</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="about.html">About Us</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="team.html">Our Team</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="gallery.html">Gallery</a></li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-4 footer-accordion-column">
                         <h5>Portfolio</h5>
-                        <ul class="nav d-flex flex-column row-gap-0">
-                            <li class="nav-item"><a class="nav-link text-light" href="events.html">Events</a></li>
-                            <li class="nav-item"><a class="nav-link text-light" href="workshops.html">Workshops</a></li>
-                            <li class="nav-item"><a class="nav-link text-light" href="displays.html">Displays</a></li>
-                            <li class="nav-item"><a class="nav-link text-light" href="capabilities.html">Our Capabilities</a></li>
-                        </ul>
+                        <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-portfolio">
+                            <span>Portfolio</span>
+                            <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
+                        </button>
+                        <div class="footer-accordion-content" id="footer-accordion-portfolio">
+                            <ul class="nav d-flex flex-column row-gap-0">
+                                <li class="nav-item"><a class="nav-link text-light" href="events.html">Events</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="workshops.html">Workshops</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="displays.html">Displays</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="capabilities.html">Our Capabilities</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-4 footer-accordion-column">
+                        <h5>Success Stories</h5>
+                        <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-success">
+                            <span>Success Stories</span>
+                            <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
+                        </button>
+                        <div class="footer-accordion-content" id="footer-accordion-success">
+                            <ul class="nav d-flex flex-column row-gap-0">
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-connect140.html">Connect 140</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-forrestfield.html">A World of Flavours</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-neighbourhood-nibbles.html">Neighbourhood Nibbles</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-50th-birthday.html">50th Birthday</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-breast-cancer.html">Breast Cancer Awareness</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -30,9 +58,12 @@
                 <a href="index.html" aria-label="Home">
                     <img src="assets/images/logo-blk.png" alt="Bloom'n Events Co Logo" class="img-fluid footer-logo mb-3" loading="lazy" decoding="async">
                 </a>
-                <p class="text-gold fw-light small mb-0">
-                    <a href="tandcs.html" class="text-gold text-decoration-none">Terms & Conditions</a>  |  <a href="policies.html" class="text-gold text-decoration-none">Company Policies</a>  |  Copyright &copy; <span id="current-year"></span> Bloom'n Events Co Pty Ltd. All rights reserved.<br>
-                </p>
+                    <p class="text-gold fw-light small mb-1">
+                        <a href="tandcs.html" class="text-gold text-decoration-none">Terms & Conditions</a>  |  <a href="policies.html" class="text-gold text-decoration-none">Company Policies</a>
+                    </p>
+                    <p class="text-gold fw-light small mb-0">
+                        Copyright &copy; <span id="current-year"></span> Bloom'n Events Co Pty Ltd. All rights reserved.
+                    </p>
             </div>
             
             <!-- Call to Action and Social Media on Right -->
